# rc

./: Cargo.toml  README.md  deny.toml
.config/: nextest.toml
.github/: coverage-baseline.json
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  runtime.rs  settings_io.rs
crates/core/: Cargo.toml
crates/core/assets/: mc.default.keymap  mc.default.keymap.fixture
crates/core/src/: background.rs  command_dispatch.rs  command_map.rs  dialog.rs  dialog_flow.rs  find_flow.rs  help.rs  jobs.rs  keybinding_help.rs  keymap.rs  lib.rs  navigation_flow.rs  orchestration.rs  panel.rs  panelize_flow.rs  process_backend.rs  refresh_flow.rs  route_flow.rs  settings.rs  settings_flow.rs  settings_io.rs  slo.rs  state_flow.rs  tests.rs  tree_builder.rs  viewer.rs  viewer_flow.rs
crates/core/src/tests/: find_tests.rs  mod.rs  panelize_tests.rs  refresh_tests.rs  route_command_tests.rs  viewer_tests.rs
crates/core/tests/: background_worker_integration.rs  job_worker_integration.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  skin.rs
doc/: roadmap.md
doc/adr/: 0001-architecture-baseline.md  0002-ci-guardrails.md  README.md
doc/architecture/: README.md  bounded-contexts.md  crate-contracts.md  module-ownership.md
scripts/: coverage_trend.sh
