[workspace]
members = ["crates/app", "crates/core", "crates/ui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

rc-core = { path = "crates/core" }
rc-ui = { path = "crates/ui" }
