[workspace]
members = ["crates/app", "crates/core", "crates/ui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
unicode-width = "0.1.14"

rc-core = { path = "crates/core" }
rc-ui = { path = "crates/ui" }
